--- a/client/src/index.css
+++ b/client/src/index.css
@@ -44,6 +44,15 @@ code {
     monospace;
 }
 
+.App {
+    height: initial !important;
+}
+
+canvas {
+    display: block;
+    margin: 0 auto;
+}
+
 /* ----- Buttons ----- */
 button {
   padding: 0.5rem 0.75rem;
@@ -76,5 +85,8 @@ textarea:focus {
 }
 
 .message {
-    overflow-y: initial !important;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
