UX and Performance improvements

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -90,3 +90,8 @@ textarea:focus {
     flex-direction: column;
     justify-content: center;
 }
+
+.canvas-wrapper {
+    margin: 1em auto;
+    max-width: 95vw;
+}
